objects/Account_Segmentation_History__c.object
<CustomObject>
    <description>R7B – Account Segmentation Enhancements</description>
    <fields>
        <fullName>Account_Sales_Segmentation__c</fullName>
        <description>R7B - Account Segmentation Enhancement</description>
        <label>Account Sales Segmentation</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Segmentation__c</fullName>
        <description>R7B – Account Segmentation Enhancements</description>
        <label>Account Segmentation</label>
        <referenceTo>Customer_Segmentation__c</referenceTo>
        <relationshipLabel>Account Segmentation History Records</relationshipLabel>
        <relationshipName>Account_Segmentation_History_Records</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Old_Business_Line_BU__c</fullName>
        <description>SFDC-4233 – Extension of Segmentation History Object</description>
        <label>Old BU</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_DIV__c</fullName>
        <description>SFDC-4233 – Extension of Segmentation History Object</description>
        <label>Old DIV</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Heat_Map_Year__c</fullName>
        <description>SFDC-4470 – Enable Segmentation History Records tracking for Customer Marketing Segmentations</description>
        <label>Old Heat Map Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Heat_Map__c</fullName>
        <description>SFDC-4470 – Enable Segmentation History Records tracking for Customer Marketing Segmentations</description>
        <label>Old Heat Map</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Product_Group__c</fullName>
        <description>SFDC-4233 – Extension of Segmentation History Object</description>
        <label>Old Product Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Sales_Segmentation_Value__c</fullName>
        <description>R7B – Account Segmentation Enhancements</description>
        <label>Old Account Segmentation</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Segment_Level__c</fullName>
        <description>SFDC-4233 – Extension of Segmentation History Object</description>
        <label>Old Segment Level</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Segmentation_1__c</fullName>
        <label>Old Division/BU Segmentation 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Segmentation_2__c</fullName>
        <label>Old Division/BU Segmentation 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Segmentation_3__c</fullName>
        <label>Old Segmentation 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Share_of_Wallet__c</fullName>
        <description>R7B – Account Segmentation Enhancements</description>
        <label>Old Share of Wallet</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <description>R7B – Account Segmentation Enhancements</description>
        <label>Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timestamp__c</fullName>
        <description>R7B – Account Segmentation Enhancements</description>
        <label>Timestamp</label>
        <type>DateTime</type>
    </fields>
    <label>Account Segmentation History Records</label>
    <nameField>
        <label>Account Segmentation History  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Segmentation History Records</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>